--- a/css/main.css
+++ b/css/main.css
@@ -349,6 +349,8 @@ div.logo img {
 
 nav.navegacion-principal {
     display: none;
+    width: 100%;
+    margin-top: 65px;
 }
 
 @media only screen and (min-width:1100px) {
@@ -357,6 +359,7 @@ nav.navegacion-principal {
         float: right;
         text-align: right;
         display: block;
+        margin-top: 0;
     }
 }
 
@@ -816,7 +819,7 @@ div.contenedor div.vision {
 
 div.mapa {
     height: 420px;
-    background-color: green;
+    background-color: #E7EDED;
 }
 
 div.info-curso p {
@@ -834,6 +837,94 @@ div.imagen-mmln {
 div.imagen-mmln img {
     display: block;
     width: 100%;
+}
+
+div.caja {
+    background-color: rgba(77, 92, 51, .60);
+    border: 1px solid #020718;
+    padding: 10px;
+    margin: 10px;
+}
+
+div.campo {
+    padding: 20px;
+}
+
+@media only screen and (min-width:768px) {
+    div.campo {
+        float: left;
+        width: 33.3%;
+    }
+}
+
+div.paquetes .tabla-precio:hover {
+    transform: none;
+    box-shadow: none;
+}
+
+div.paquetes .tabla-precio input {
+    clear: both;
+    width: 100px;
+    margin: 10px auto 0 auto;
+    display: block;
+}
+
+div.resumen p {
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+
+div.resumen div.extras {
+    float: left;
+    width: 50%;
+    padding: 30px;
+}
+
+div.extras div.orden {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+div.extras div.orden input {
+    margin: 10px 0 0 0;
+}
+
+div.resumen div.total {
+    float: right;
+    width: 50%;
+    padding: 30px;
+}
+
+div.resumen input {
+    display: block;
+    margin: 10px auto;
+}
+
+#lista-productos {
+    padding: 20px;
+}
+
+#suma-total {
+    text-align: center;
+    font-size: 2em;
+}
+
+#error {
+    clear: both;
+    padding: 15px;
+    text-align: center;
+}
+
+.fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9;
+}
+
+.mapa {
+    z-index: 8;
 }
 
 
